--- a/src/main/resources/CSS/rolePage.css
+++ b/src/main/resources/CSS/rolePage.css
@@ -26,9 +26,10 @@
 .tableView .column-header, .filter{
     -fx-background-color: transparent;
     -fx-size: 40px;
+    -fx-text-fill: #02462f;
 }
 .tableView .column-header .label{
-    -fx-text-fill: #fff;
+    -fx-text-fill: #02462f;
 }
 
 .roleBgBtn{
