--- a/src/main/resources/adminLogin.fxml
+++ b/src/main/resources/adminLogin.fxml
@@ -192,8 +192,8 @@
                         </Lighting>
                      </effect>
                   </ImageView>
-                  <TextField alignment="CENTER" layoutX="58.0" layoutY="149.0" prefHeight="28.0" prefWidth="190.0" promptText="user name" style="-fx-background-color: transparent; -fx-border-color: #02462f; -fx-border-width: 0px 0px 2px 0px;" />
-                  <TextField alignment="CENTER" layoutX="58.0" layoutY="201.0" prefHeight="28.0" prefWidth="190.0" promptText="password" style="-fx-background-color: transparent; -fx-border-color: #02462f; -fx-border-width: 0px 0px 2px 0px;" />
+                  <TextField fx:id="adminNameField" alignment="CENTER" layoutX="58.0" layoutY="149.0" prefHeight="28.0" prefWidth="190.0" promptText="user name" style="-fx-background-color: transparent; -fx-border-color: #02462f; -fx-border-width: 0px 0px 2px 0px;" />
+                  <TextField fx:id="adminPassField" alignment="CENTER" layoutX="58.0" layoutY="201.0" prefHeight="28.0" prefWidth="190.0" promptText="password" style="-fx-background-color: transparent; -fx-border-color: #02462f; -fx-border-width: 0px 0px 2px 0px;" />
                   <Button fx:id="login" layoutX="58.0" layoutY="274.0" mnemonicParsing="false" prefHeight="26.0" prefWidth="190.0" styleClass="adminLoginBtns" stylesheets="@CSS/adminLogin.css" text="LOGIN" textFill="#b6fcca">
                      <font>
                         <Font name="Berlin Sans FB Demi Bold" size="14.0" />
